--- a/temp_style.css
+++ b/temp_style.css
@@ -29,9 +29,9 @@ header {
 
 h2 {
     display: block;
-    font-size: 24px;
+    font-size: 60px;
     line-height: 30px;
-    font-weight: 500;
+    font-weight: 400;
     text-rendering: optimizeLegibility;
 }
 
@@ -51,7 +51,7 @@ main {
 
 footer {
     background-color: #dad1b449;
-    padding: 40px;
+    padding: 30px;
     color: #494e52;
     margin-top: 50px;
 }
@@ -116,6 +116,72 @@ footer {
 svg {
     fill: #494e52; /* Change the default fill color for all SVG elements */
 }
+
+
+/* Sticky Menu Bar Styles */
+.menu-bar {
+    position: sticky;
+    top: 0;
+    background-color: #f3efdf;
+    z-index: 100;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; /* Vertically align items */
+    padding: 10px 20px; 
+    height: 80px;
+}
+
+.branding {
+    color: #63696e;
+    font-size: 30px; 
+    font-weight: 600;
+    padding: 0 30px;
+}
+
+.menu-bar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+.menu-bar li {
+    float: right;
+    padding: 0 20px; 
+}
+
+.menu-bar a {
+    display: block;
+    color: #63696e;
+    text-align: center;
+    text-decoration: none;
+    font-size: 17px;
+    font-weight: 350;
+}
+
+.menu-bar a {
+    text-decoration: none;
+    position: relative;
+}
+
+.menu-bar a:hover::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #dad1b4; /* Color of the underline */
+    transform: scaleX(0); /* Start with no underline */
+    transform-origin: bottom right;
+    transition: transform 0.3s;
+}
+
+.menu-bar a:hover::before {
+    transform: scaleX(1); /* Scale to create the underline */
+    transform-origin: bottom left;
+}
+
 
 
 /* input {
