--- a/temp_style.css
+++ b/temp_style.css
@@ -123,7 +123,7 @@ section {
 }
 
 .start {
-    padding: 0 0 80px 0;
+    padding: 80px 0;
 }
 
 /* Center-align the image */
@@ -131,7 +131,6 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 400px; /* Set the desired height for the container */
     overflow: hidden;
     border-radius: 100%; /* Round the corners */
     margin: 0 auto; /* Center the container horizontally */
@@ -140,7 +139,7 @@ section {
 
 /* Style the image within the container */
 .image-container img {
-    max-width: 100%;
+    max-width: 115%;
     max-height: 100%;
     border-radius: 100%; /* Round the corners of the image */
 }
