--- a/temp_style.css
+++ b/temp_style.css
@@ -122,10 +122,6 @@ section {
     padding: 80px 0; /* Add some padding for spacing */
 }
 
-.start {
-    padding: 80px 0;
-}
-
 /* Center-align the image */
 .image-container {
     display: flex;
@@ -174,7 +170,7 @@ section {
 
 .menu-bar li {
     float: right;
-    padding: 0 20px; 
+    padding: 10px 20px; 
 }
 
 .menu-bar a {
@@ -191,24 +187,28 @@ section {
     position: relative;
 }
 
-.menu-bar a:hover::before {
+/* .menu-bar a:hover::before {
     content: '';
     position: absolute;
     width: 100%;
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #dad1b4; /* Color of the underline */
-    transform: scaleX(0); /* Start with no underline */
+    background-color: #dad1b4; 
+    transform: scaleX(0); 
     transform-origin: bottom right;
     transition: transform 0.3s;
 }
 
 .menu-bar a:hover::before {
-    transform: scaleX(1); /* Scale to create the underline */
+    transform: scaleX(1); 
     transform-origin: bottom left;
-}
+} */
 
+.menu-bar li:hover {
+    background-color: #dad1b462;
+    border-radius: 10px; /* Add rounded corners on hover */
+}
 
 
 /* input {
