--- a/temp_style.css
+++ b/temp_style.css
@@ -57,6 +57,24 @@ footer {
     margin-top: 50px;
 }
 
+.contactform {
+    background-color: #dad0b449;
+    padding: 30px 30px;
+    border-radius: 25px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
+}
+
+.contactform label,
+.contactform input,
+.contactform textarea {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
 .center {
     display: block;
     margin: 20px auto 50px;
