--- a/temp_style.css
+++ b/temp_style.css
@@ -57,6 +57,20 @@ footer {
     margin-top: 50px;
 }
 
+.resume-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: rgba(153, 147, 127, 0.616);
+    color: #ffffff; 
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.resume-button:hover {
+    background-color: #949080e2; /* Darker shade on hover*/
+}
+
 .contactform {
     background-color: #dad0b449;
     padding: 30px 30px;
