--- a/temp_style.css
+++ b/temp_style.css
@@ -72,21 +72,46 @@ footer {
 }
 
 .contactform {
-    background-color: #dad0b449;
+    background-color: rgba(176, 168, 143, 0.616); 
     padding: 30px 30px;
     border-radius: 25px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: left;
 }
 
-.contactform label,
+.contactform label {
+    width: 100%;
+    margin-bottom: 10px;
+    color: #fff; /* White text */
+}
+
 .contactform input,
 .contactform textarea {
     width: 100%;
-    margin-bottom: 10px;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: none;
+    border-radius: 5px;
+}
+
+.contactform textarea {
+    resize: vertical; /* Allow vertical resizing of the textarea */
+}
+
+.contactform button {
+    background-color: #fff; /* White background for the button */
+    color: #494e52bd; 
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.contactform button:hover {
+    background-color: #9490804f; /* Darker shade on hover*/
 }
 
 .center {
