--- a/temp_style.css
+++ b/temp_style.css
@@ -72,7 +72,7 @@ footer {
 }
 
 .contactform {
-    background-color: rgba(176, 168, 143, 0.616); 
+    background-color: #dedacf89; 
     padding: 30px 30px;
     border-radius: 25px;
     margin: 0 auto;
@@ -84,7 +84,7 @@ footer {
 .contactform label {
     width: 100%;
     margin-bottom: 10px;
-    color: #fff; /* White text */
+    color: #494e52d0;
 }
 
 .contactform input,
@@ -102,7 +102,7 @@ footer {
 
 .contactform button {
     background-color: #fff; /* White background for the button */
-    color: #494e52bd; 
+    color: rgba(116, 125, 133, 0.767); 
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
@@ -111,7 +111,7 @@ footer {
 }
 
 .contactform button:hover {
-    background-color: #9490804f; /* Darker shade on hover*/
+    background-color: #dad1b4b4; /* Darker shade on hover*/
 }
 
 .center {
